--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -87,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"img/group-4.png\">"
+    "<img src=\"https://nbviewer.jupyter.org/github/ElmoLee822/Subtractor/blob/master/img/group-4.PNG\">"
    ]
   },
   {
@@ -116,7 +116,7 @@
    "metadata": {},
    "source": [
     "### --- accuracy in different batch size\n",
-    "<img src=\"img/tune_batch_size.png\">"
+    "<img src=\"https://nbviewer.jupyter.org/github/ElmoLee822/Subtractor/blob/master/img/tune_batch_size.PNG\">"
    ]
   },
   {
@@ -124,7 +124,7 @@
    "metadata": {},
    "source": [
     "### --- MSG prediction result\n",
-    "<img src=\"img/batch_MSG_result.png\">"
+    "<img src=\"https://nbviewer.jupyter.org/github/ElmoLee822/Subtractor/blob/master/img/batch_MSG_result.PNG\">"
    ]
   },
   {
@@ -146,9 +146,9 @@
    "metadata": {},
    "source": [
     "### --- accuracy in different hidden size\n",
-    "<img src=\"img/tune_hidden_size.png\">\n",
+    "<img src=\"https://nbviewer.jupyter.org/github/ElmoLee822/Subtractor/blob/master/img/tune_hidden_size.PNG\">\n",
     "### --- MSG prediction result\n",
-    "<img src=\"img/hidden_MSG_result.png\">"
+    "<img src=\"https://nbviewer.jupyter.org/github/ElmoLee822/Subtractor/blob/master/img/hidden_MSG_result.PNG\">"
    ]
   },
   {
@@ -176,15 +176,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"img/adder_subtractor_MSG.png\">"
+    "<img src=\"https://nbviewer.jupyter.org/github/ElmoLee822/Subtractor/blob/master/img/adder_subtractor_MSG.PNG\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"img/adder_subtractor_result.png\">"
+    "<img src=\"https://nbviewer.jupyter.org/github/ElmoLee822/Subtractor/blob/master/img/adder_subtractor_result.PNG\">"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
